tdf#154088 Merge code snippets for character retrieval and string construction

The DrawChars_Impl method has been unified since the duplicates were identical
and only differed in how they retrieved characters from a separate source. Each
class now has its own implentation of GetCharFromIndex as a solution.

Change-Id: Ic2d10a46a91ea8dee2c94b620e6745bf77ae9eab
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159773
Tested-by: Jenkins
Reviewed-by: Hossein <hossein@libreoffice.org>